[package]
name = "lambda-delta-checkpoint"
version = "0.1.0"
authors = ["xianwill <christianwilliams79@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
lambda_runtime = { version = "0.7" }
lazy_static = "1"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
pretty_env_logger = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "io-util"] }
tokio-stream = { version = "0", features = ["fs"] }

[dependencies.deltalake]
path = "../../rust"
version = "0"

[dev-dependencies]
rusoto_core = { version = "0.48", default-features = false }
rusoto_credential = "0.47"
rusoto_s3 = { version = "0.47", default-features = false }

[features]
default = ["rustls"]
native-tls = ["deltalake/s3-native-tls", "rusoto_core/native-tls", "rusoto_s3/native-tls"]
rustls = ["deltalake/s3", "rusoto_core/rustls", "rusoto_s3/rustls"]
integration_test = []


[[bin]]
name = "bootstrap"
path = "src/main.rs"