[package]
name = "deltalake-aws"
version = "0.10.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# path dependencies
deltalake-core = { version = "0.27.0", path = "../core" }

# workspace dependencies
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
url = { workspace = true }

# crates.io dependencies
aws-smithy-runtime-api = { version = "1.7" }
aws-smithy-runtime = { version = "1.7", optional = true }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-config = { version = "1.5", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
    "sso",
] }
aws-sdk-sso = { version = "=1.72.0"}
aws-sdk-ssooidc = { version = "=1.73.0"}
aws-sdk-dynamodb = { version = "=1.79.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }
aws-sdk-sts = { version = "=1.73.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }
backon = { version = "1", default-features = false, features = ["tokio-sleep"] }
hyper-tls = { version = "0.5", optional = true }
maplit = "1"

[dev-dependencies]
deltalake-core = { path = "../core" }
chrono = { workspace = true }
serial_test = "3"
deltalake-test = { path = "../test" }
pretty_env_logger = "0.5.0"
rand = "0.8"
serde_json = { workspace = true }

[features]
default = ["rustls"]
integration_test = []
native-tls = [
    "aws-config/client-hyper",
    "aws-smithy-runtime/connector-hyper-0-14-x",
    "hyper-tls",
]
rustls = [
    "aws-config/client-hyper",
    "aws-config/rustls",
    "aws-sdk-dynamodb/rustls",
    "aws-sdk-sts/rustls",
]
