[package]
name = "deltalake-aws"
version = "0.14.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# path dependencies
deltalake-core = { version = "0.31.0", path = "../core" , features = ["cloud"]}

# workspace dependencies
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
url = { workspace = true }

# crates.io dependencies
aws-smithy-runtime-api = { version = "1.11" }
aws-smithy-runtime = { version = "1.10", optional = true }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-config = { version = "1.8", features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
] }
aws-sdk-dynamodb = { version = "1.105.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }
aws-sdk-sts = { version = "1.98.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }
backon = { version = "1", default-features = false, features = ["tokio-sleep"] }
hyper-tls = { version = "0.5", optional = true }

[dev-dependencies]
chrono = { workspace = true }
deltalake-core = { path = "../core" }
deltalake-test = { path = "../test" }
pretty_env_logger = "0.5.0"
pretty_assertions = "1"
rand = "0.8"
serde_json = { workspace = true }
serial_test = "3"

[features]
default = ["rustls"]
integration_test = []
native-tls = [
    "aws-config/client-hyper",
    "aws-smithy-runtime/connector-hyper-0-14-x",
    "hyper-tls",
]
rustls = [
    "aws-config/client-hyper",
    # Use the new AWS SDK default HTTPS client stack (hyper 1.x + rustls via aws-lc-rs),
    # not the legacy `rustls` feature which pins us to hyper 0.14.
    "aws-sdk-dynamodb/default-https-client",
    "aws-sdk-sts/default-https-client",
]
