[package]
name = "deltalake-aws"
version = "1.0.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# path dependencies
deltalake-core = { version = "1.0", path = "../core" , default-features = false, features = ["cloud"]}

# workspace dependencies
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
tokio = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
url = { workspace = true }

# crates.io dependencies
aws-smithy-runtime-api = { version = "1.11" }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-config = { version = "1.8", features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
] }
aws-sdk-sts = { version = "1.101.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }

[dev-dependencies]
chrono = { workspace = true }
deltalake-core = { path = "../core" }
deltalake-test = { path = "../test" }
pretty_env_logger = "0.5.0"
pretty_assertions = "1"
rand = "0.10"
serde_json = { workspace = true }
serial_test = "3"

[features]
default = ["rustls"]
integration_test = []
native-tls = [
    "deltalake-core/native-tls",
    "aws-config/client-hyper",
]
rustls = [
    "deltalake-core/rustls",
    "aws-config/client-hyper",
    "aws-sdk-sts/default-https-client",
]

[package.metadata.cargo-machete]
ignored = ["aws-sdk-sts", "aws-smithy-runtime-api", "time"]
