[package]
name = "deltalake-azure"
version = "0.12.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deltalake-core = { version = "0.29.0", path = "../core", features = ["cloud"] }

# workspace depenndecies
bytes = { workspace = true }
object_store = { workspace = true, features = ["azure"] }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
deltalake-core = { version = "0.29.0", path = "../core", features = [
    "datafusion",
] }
chrono = { workspace = true }
serial_test = "3"
deltalake-test = { path = "../test" }
pretty_env_logger = "0.5.0"
rand = "0.8"
serde_json = { workspace = true }

[features]
integration_test = []
