[package]
name = "delta-benchmarks"
version = "0.0.1"
authors = ["David Blajda <db@davidblajda.com>"]
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
keywords = ["deltalake", "delta", "datalake"]
description = "Delta-rs Benchmarks"
edition = "2021"

[dependencies]
clap = { version = "4", features = [ "derive" ] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["fs", "macros", "rt", "io-util"] }

# arrow
arrow = { workspace = true }
arrow-array = { workspace = true }

# serde
serde_json = { workspace = true }

# datafusion
datafusion = { workspace = true }

[dependencies.deltalake-core]
path = "../core"
version = "0"
features = ["datafusion"]
