[package]
name = "deltalake-catalog-glue"
version = "0.11.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
aws-config = "1"
aws-sdk-glue = "=1.78.0"
deltalake-core = { version = "0.27.0", path = "../core" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
