[package]
name = "deltalake-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = { version = "0.47", default-features = false, optional = true }
rusoto_credential = { version = "0.47", optional = true }
rusoto_sts = { version = "0.47", default-features = false, optional = true }
rusoto_dynamodb = { version = "0.47", default-features = false, optional = true }
object_store = "0.7"
lazy_static = "1"
maplit = "1"
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]

[features]
native-tls = [
    "rusoto_core/native-tls",
    "rusoto_credential",
    "rusoto_sts/native-tls",
    "rusoto_dynamodb/native-tls",
    "object_store/aws",
]
rustls = [
    "rusoto_core/rustls",
    "rusoto_credential",
    "rusoto_sts/rustls",
    "rusoto_dynamodb/rustls",
    "object_store/aws",
]
