[package]
name = "deltalake-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-sql = { workspace = true }

[dev-dependencies]
arrow-schema = { workspace = true }
