[package]
name = "deltalake-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }
deltalake-core = { path = "../deltalake-core" }
dotenvy = "0"
fs_extra = "1.3.0"
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3"

[features]
default = []
datafusion = ["deltalake-core/datafusion"]
